# quickcheck-text

./: .travis.yml  LICENSE  README.md  quickcheck-text.cabal
src/Data/Text/: Arbitrary.hs
src/Test/QuickCheck/: Text.hs  Utf8.hs
test/: properties.hs
