name:                quickcheck-text
version:             0.1.0.0
synopsis:            Alternative arbitrary instance for Text
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2015 Sharif Olorin
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.QuickCheck.Utf8
                       Data.Text.Arbitrary
  build-depends:       base >=4.7 && <5
                     , QuickCheck
                     , bytestring
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite properties
  hs-source-dirs:      test
  main-is:             properties.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , QuickCheck
                     , bytestring
                     , quickcheck-text
                     , text
